# HaskellProject-RestAPI

./: README.md
projetoHaskellAPI/: projetoHaskellAPI.cabal
projetoHaskellAPI/src/: Aluno.hs  Db.hs  DbAluno.hs  Main.hs  User.hs
projetoHaskellFront/: projetoHaskellFront.cabal
projetoHaskellFront/src/: Main.hs
